--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel": "babel --preset es2015 js/main.js -o build/main.bundle.js",
+    "start": "http-server -p 9000",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,11 @@
   },
   "homepage": "https://github.com/dmagill89/SkyBox#readme",
   "devDependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "webpack": "^1.13.1"
   }
 }
